fix: increase font size of scrollbar thumb for better visibility

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -657,7 +657,7 @@ html::-webkit-scrollbar-thumb:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     text-align: center;
     color: orangered;
     font-weight: bold;
